# Version 2.6

## New Features:
* Virtual Networks - Added menu option to create a Swarm cluster and VLAN
* Manage Containers - Allows you to modify the Container Arguments
* Manage Containers - Allows you to modify the Heartbeat port
* Manage Containers - Allows you to modify the failover constraints

## Enhancements:
* PiCTL can now upload container zip files.
* PiCluster Server displays version for / GET requests
* When adding a new node, a heartbeat config will be added.

## Bug Fixes:
* None