@@ -10,6 +10,7 @@
 * PiCTL can now upload container zip files.
 * PiCluster Server displays version for / GET requests
 * When adding a new node, a heartbeat config will be added.
+* Added Node Network Utilization Monitoring for Elasticsearch.
 
 ## Bug Fixes:
 * None
